/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Sean Merkel
 */
package ucf.assignments;

public class TodoListItem {
    /*
    declare private String description
    declare private int dueDate
    make a public TodoListItem made up of a string and int using this.
        create get and set methods for the string and int
    create a function that can update an item's description
    create a function that can update an item's due date
    create a function that can take all of an item's information and make it into one string
     */

}
